# freedive

./: pyproject.toml  readme.md
freediving/: __init__.py
freediving/dive/: __init__.py  dive.py  errors.py  tests.py
freediving/fitfiles/: __init__.py  errors.py  read.py  session.py  tests.py
freediving/fitfiles/samples/: sample.fit
